Add map and fix no results

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 
                     <section id="results">
 
+                        <h2>Clima ahora en <span id="city-name"></span></h2>
+
                         <div id="weather-type">
                             <img src="" alt="weather-icon" id="weather-icon">
                             <p id="weather-description"></p>
@@ -102,6 +104,9 @@
 
                     </section>
 
+                </div>
+                <div class="col-12 outer-container" id="map-container">
+                    <img src="" id="map"/> 
                 </div>
 
             </div>
