--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="css/bootstrap/css/bootstrap.css" >
         <link rel="stylesheet" type="text/css" href="css/main.css">
+        <link rel="shortcut icon" href="favicon.png" type="image/x-icon"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
         <title>Patricio Huang, Cátedra PWA</title>
     </head>
